documentation/2.0/manual/scalaGuide/_Sidebar.md
<!-- translated -->
<!--
### Main concepts
-->
### 基本的な機能

<!-- - [[HTTP programming | ScalaActions]]
- [[Asynchronous HTTP programming | ScalaAsync]]
- [[The template engine | ScalaTemplates]]
- [[HTTP form submission and validation | ScalaForms]]
- [[Working with JSON | ScalaJson]]
- [[Working with XML | ScalaXmlRequests]]
- [[Handling file upload | ScalaFileUpload]]
- [[Accessing an SQL database | ScalaDatabase]]
- [[Using the Cache | ScalaCache]]
- [[Calling WebServices | ScalaWS]]
- [[Integrating with Akka | ScalaAkka]]
- [[Internationalization | ScalaI18N]]
- [[The application Global object | ScalaGlobal]]
- [[Testing your application | ScalaTest]] -->
- [[HTTP プログラミング | ScalaActions]]
- [[非同期 HTTP プログラミング | ScalaAsync]]
- [[テンプレートエンジン | ScalaTemplates]]
- [[HTTP フォームの送信とバリデーション | ScalaForms]]
- [[JSON | ScalaJson]]
- [[XML | ScalaXmlRequests]]
- [[ファイルアップロード | ScalaFileUpload]]
- [[SQL データベースアクセス | ScalaDatabase]]
- [[キャッシュ | ScalaCache]]
- [[Web サービスの呼び出し | ScalaWS]]
- [[Akka の統合 | ScalaAkka]]
- [[多言語対応 | ScalaI18N]]
- [[Global オブジェクト | ScalaGlobal]]
- [[テスト | ScalaTest]]

<!--
### Advanced topics
-->
### 高度なトピック

<!--
- [[Handling data streams reactively | Iteratees]]
-->
- [[反応的なストリーム処理 | Iteratees]]

<!--
### Tutorials
-->
### チュートリアル

<!--
- [[Your first application | ScalaTodoList]]
-->
- [[はじめてのアプリケーション | ScalaTodoList]]