documentation/2.1.1/manual/scalaGuide/_Sidebar.md
<!-- ### Main concepts -->
### 主要なコンセプト

<!-- - [[HTTP programming | ScalaActions]]
- [[Asynchronous HTTP programming | ScalaAsync]]
- [[The template engine | ScalaTemplates]]
- [[HTTP form submission and validation | ScalaForms]]
- [[Working with JSON | ScalaJson]]
- [[Working with XML | ScalaXmlRequests]]
- [[Handling file upload | ScalaFileUpload]]
- [[Accessing an SQL database | ScalaDatabase]]
- [[Using the Cache | ScalaCache]]
- [[Calling WebServices | ScalaWS]]
- [[Integrating with Akka | ScalaAkka]]
- [[Internationalization | ScalaI18N]]
- [[The application Global object | ScalaGlobal]]
- [[Testing your application | ScalaTest]] -->
- [[HTTP プログラミング | ScalaActions]]
- [[非同期 HTTP プログラミング | ScalaAsync]]
- [[テンプレート・エンジン | ScalaTemplates]]
- [[HTTP フォーム送信とバリデーション | ScalaForms]]
- [[JSON を使う | ScalaJson]]
- [[XML を使う | ScalaXmlRequests]]
- [[ファイルアップロード処理 | ScalaFileUpload]]
- [[SQL データベースアクセス | ScalaDatabase]]
- [[キャッシュを使う | ScalaCache]]
- [[Web サービスの呼び出し | ScalaWS]]
- [[Akka との統合 | ScalaAkka]]
- [[国際化 | ScalaI18N]]
- [[アプリケーション Global オブジェクト | ScalaGlobal]]
- [[テストについて | ScalaTest]]
    
<!-- ### Advanced topics -->
### 上級編

<!-- - [[Handling data streams reactively | Iteratees]]
- [[HTTP API | HttpApi]]
- [[HTTP Filters | ScalaHttpFilters]] -->
- [[反応的なストリーム処理 | Iteratees]]
- [[HTTP API | HttpApi]]
- [[HTTP Filters | ScalaHttpFilters]]

<!-- ### Tutorials -->
### チュートリアル

<!-- - [[Your first application | ScalaTodoList]] -->
- [[はじめてのアプリケーション | ScalaTodoList]]
